kosek/py2/osekoilParser.py
# Generated from osekoil.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class osekoilParser ( Parser ):

    grammarFileName = "osekoil.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'OIL_VERSION'", u"'='", u"';'", u"'IMPLEMENTATION'", 
                     u"'{'", u"'}'", u"'OS'", u"'TASK'", u"'COUNTER'", u"'ALARM'", 
                     u"'RESOURCE'", u"'EVENT'", u"'ISR'", u"'MESSAGE'", 
                     u"'COM'", u"'NM'", u"'APPMODE'", u"'IPDU'", u"'NETWORKMESSAGE'", 
                     u"'UINT32'", u"'INT32'", u"'UINT64'", u"'INT64'", u"'FLOAT'", 
                     u"'ENUM'", u"'STRING'", u"'BOOLEAN'", u"'['", u"']'", 
                     u"','", u"'TRUE'", u"'FALSE'", u"'WITH_AUTO'", u"'NO_DEFAULT'", 
                     u"'AUTO'", u"'OS_TYPE'", u"'TASK_TYPE'", u"'COUNTER_TYPE'", 
                     u"'ALARM_TYPE'", u"'RESOURCE_TYPE'", u"'EVENT_TYPE'", 
                     u"'ISR_TYPE'", u"'MESSAGE_TYPE'", u"'COM_TYPE'", u"'NM_TYPE'", 
                     u"'APPMODE_TYPE'", u"'IPDU_TYPE'", u"'NETWORKMESSAGE_TYPE'", 
                     u"'CPU'", u"':'", u"'..'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"ID", u"INT", u"FLOAT", u"HEX", u"WS", u"STRING" ]

    RULE_oilfile = 0
    RULE_oilVersion = 1
    RULE_implementationDefinition = 2
    RULE_implementationSpecList = 3
    RULE_implementationSpec = 4
    RULE_oil_object = 5
    RULE_implementationList = 6
    RULE_implementationDef = 7
    RULE_implAttrDef = 8
    RULE_attributeName = 9
    RULE_numberRange = 10
    RULE_numberList = 11
    RULE_multipleSpecifier = 12
    RULE_floatRange = 13
    RULE_enumeration = 14
    RULE_enumeratorList = 15
    RULE_enumerator = 16
    RULE_boolValues = 17
    RULE_autoSpecifier = 18
    RULE_defaultNumber = 19
    RULE_defaultFloat = 20
    RULE_defaultName = 21
    RULE_defaultString = 22
    RULE_defaultBool = 23
    RULE_implParameterList = 24
    RULE_implDefList = 25
    RULE_implRefDef = 26
    RULE_objectRefType = 27
    RULE_referenceName = 28
    RULE_applicationDefinition = 29
    RULE_objectDefinitionList = 30
    RULE_objectDefinition = 31
    RULE_objectName = 32
    RULE_parameterList = 33
    RULE_parameter = 34
    RULE_attributeValue = 35
    RULE_description = 36
    RULE_rng = 37
    RULE_number = 38
    RULE_boolean = 39

    ruleNames =  [ u"oilfile", u"oilVersion", u"implementationDefinition", 
                   u"implementationSpecList", u"implementationSpec", u"oil_object", 
                   u"implementationList", u"implementationDef", u"implAttrDef", 
                   u"attributeName", u"numberRange", u"numberList", u"multipleSpecifier", 
                   u"floatRange", u"enumeration", u"enumeratorList", u"enumerator", 
                   u"boolValues", u"autoSpecifier", u"defaultNumber", u"defaultFloat", 
                   u"defaultName", u"defaultString", u"defaultBool", u"implParameterList", 
                   u"implDefList", u"implRefDef", u"objectRefType", u"referenceName", 
                   u"applicationDefinition", u"objectDefinitionList", u"objectDefinition", 
                   u"objectName", u"parameterList", u"parameter", u"attributeValue", 
                   u"description", u"rng", u"number", u"boolean" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    ID=52
    INT=53
    FLOAT=54
    HEX=55
    WS=56
    STRING=57

    def __init__(self, input, output=sys.stdout):
        super(osekoilParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class OilfileContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(osekoilParser.OilfileContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.v = None # OilVersionContext
            self.i = None # ImplementationDefinitionContext
            self.a = None # ApplicationDefinitionContext

        def oilVersion(self):
            return self.getTypedRuleContext(osekoilParser.OilVersionContext,0)


        def implementationDefinition(self):
            return self.getTypedRuleContext(osekoilParser.ImplementationDefinitionContext,0)


        def applicationDefinition(self):
            return self.getTypedRuleContext(osekoilParser.ApplicationDefinitionContext,0)


        def getRuleIndex(self):
            return osekoilParser.RULE_oilfile

        def enterRule(self, listener):
            if hasattr(listener, "enterOilfile"):
                listener.enterOilfile(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOilfile"):
                listener.exitOilfile(self)




    def oilfile(self):

        localctx = osekoilParser.OilfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_oilfile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            localctx.v = self.oilVersion()
            self.state = 81
            localctx.i = self.implementationDefinition()
            self.state = 82
            localctx.a = self.applicationDefinition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OilVersionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(osekoilParser.OilVersionContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.v = None # Token
            self.d = None # DescriptionContext

        def STRING(self):
            return self.getToken(osekoilParser.STRING, 0)

        def description(self):
            return self.getTypedRuleContext(osekoilParser.DescriptionContext,0)


        def getRuleIndex(self):
            return osekoilParser.RULE_oilVersion

        def enterRule(self, listener):
            if hasattr(listener, "enterOilVersion"):
                listener.enterOilVersion(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOilVersion"):
                listener.exitOilVersion(self)




    def oilVersion(self):

        localctx = osekoilParser.OilVersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_oilVersion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(osekoilParser.T__0)
            self.state = 85
            self.match(osekoilParser.T__1)
            self.state = 86
            localctx.v = self.match(osekoilParser.STRING)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==osekoilParser.T__49:
                self.state = 87
                localctx.d = self.description()


            self.state = 90
            self.match(osekoilParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImplementationDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(osekoilParser.ImplementationDefinitionContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.i = None # ImplementationSpecListContext
            self.d = None # DescriptionContext

        def ID(self):
            return self.getToken(osekoilParser.ID, 0)

        def implementationSpecList(self):
            return self.getTypedRuleContext(osekoilParser.ImplementationSpecListContext,0)


        def description(self):
            return self.getTypedRuleContext(osekoilParser.DescriptionContext,0)


        def getRuleIndex(self):
            return osekoilParser.RULE_implementationDefinition

        def enterRule(self, listener):
            if hasattr(listener, "enterImplementationDefinition"):
                listener.enterImplementationDefinition(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImplementationDefinition"):
                listener.exitImplementationDefinition(self)




    def implementationDefinition(self):

        localctx = osekoilParser.ImplementationDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_implementationDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(osekoilParser.T__3)
            self.state = 93
            self.match(osekoilParser.ID)
            self.state = 94
            self.match(osekoilParser.T__4)
            self.state = 95
            localctx.i = self.implementationSpecList()
            self.state = 96
            self.match(osekoilParser.T__5)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==osekoilParser.T__49:
                self.state = 97
                localctx.d = self.description()


            self.state = 100
            self.match(osekoilParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImplementationSpecListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(osekoilParser.ImplementationSpecListContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._implementationSpec = None # ImplementationSpecContext
            self.items = list() # of ImplementationSpecContexts

        def implementationSpec(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(osekoilParser.ImplementationSpecContext)
            else:
                return self.getTypedRuleContext(osekoilParser.ImplementationSpecContext,i)


        def getRuleIndex(self):
            return osekoilParser.RULE_implementationSpecList

        def enterRule(self, listener):
            if hasattr(listener, "enterImplementationSpecList"):
                listener.enterImplementationSpecList(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImplementationSpecList"):
                listener.exitImplementationSpecList(self)




    def implementationSpecList(self):

        localctx = osekoilParser.ImplementationSpecListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_implementationSpecList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << osekoilParser.T__6) | (1 << osekoilParser.T__7) | (1 << osekoilParser.T__8) | (1 << osekoilParser.T__9) | (1 << osekoilParser.T__10) | (1 << osekoilParser.T__11) | (1 << osekoilParser.T__12) | (1 << osekoilParser.T__13) | (1 << osekoilParser.T__14) | (1 << osekoilParser.T__15) | (1 << osekoilParser.T__16) | (1 << osekoilParser.T__17) | (1 << osekoilParser.T__18))) != 0):
                self.state = 102
                localctx._implementationSpec = self.implementationSpec()
                localctx.items.append(localctx._implementationSpec)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImplementationSpecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(osekoilParser.ImplementationSpecContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.o = None # Oil_objectContext
            self.i = None # ImplementationListContext
            self.d = None # DescriptionContext

        def oil_object(self):
            return self.getTypedRuleContext(osekoilParser.Oil_objectContext,0)


        def implementationList(self):
            return self.getTypedRuleContext(osekoilParser.ImplementationListContext,0)


        def description(self):
            return self.getTypedRuleContext(osekoilParser.DescriptionContext,0)


        def getRuleIndex(self):
            return osekoilParser.RULE_implementationSpec

        def enterRule(self, listener):
            if hasattr(listener, "enterImplementationSpec"):
                listener.enterImplementationSpec(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImplementationSpec"):
                listener.exitImplementationSpec(self)




    def implementationSpec(self):

        localctx = osekoilParser.ImplementationSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_implementationSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            localctx.o = self.oil_object()
            self.state = 109
            self.match(osekoilParser.T__4)
            self.state = 110
            localctx.i = self.implementationList()
            self.state = 111
            self.match(osekoilParser.T__5)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==osekoilParser.T__49:
                self.state = 112
                localctx.d = self.description()


            self.state = 115
            self.match(osekoilParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oil_objectContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(osekoilParser.Oil_objectContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.oid = None # Token


        def getRuleIndex(self):
            return osekoilParser.RULE_oil_object

        def enterRule(self, listener):
            if hasattr(listener, "enterOil_object"):
                listener.enterOil_object(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOil_object"):
                listener.exitOil_object(self)




    def oil_object(self):

        localctx = osekoilParser.Oil_objectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_oil_object)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [osekoilParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                localctx.oid = self.match(osekoilParser.T__6)
                pass
            elif token in [osekoilParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                localctx.oid = self.match(osekoilParser.T__7)
                pass
            elif token in [osekoilParser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                localctx.oid = self.match(osekoilParser.T__8)
                pass
            elif token in [osekoilParser.T__9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                localctx.oid = self.match(osekoilParser.T__9)
                pass
            elif token in [osekoilParser.T__10]:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                localctx.oid = self.match(osekoilParser.T__10)
                pass
            elif token in [osekoilParser.T__11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 122
                localctx.oid = self.match(osekoilParser.T__11)
                pass
            elif token in [osekoilParser.T__12]:
                self.enterOuterAlt(localctx, 7)
                self.state = 123
                localctx.oid = self.match(osekoilParser.T__12)
                pass
            elif token in [osekoilParser.T__13]:
                self.enterOuterAlt(localctx, 8)
                self.state = 124
                localctx.oid = self.match(osekoilParser.T__13)
                pass
            elif token in [osekoilParser.T__14]:
                self.enterOuterAlt(localctx, 9)
                self.state = 125
                localctx.oid = self.match(osekoilParser.T__14)
                pass
            elif token in [osekoilParser.T__15]:
                self.enterOuterAlt(localctx, 10)
                self.state = 126
                localctx.oid = self.match(osekoilParser.T__15)
                pass
            elif token in [osekoilParser.T__16]:
                self.enterOuterAlt(localctx, 11)
                self.state = 127
                localctx.oid = self.match(osekoilParser.T__16)
                pass
            elif token in [osekoilParser.T__17]:
                self.enterOuterAlt(localctx, 12)
                self.state = 128
                localctx.oid = self.match(osekoilParser.T__17)
                pass
            elif token in [osekoilParser.T__18]:
                self.enterOuterAlt(localctx, 13)
                self.state = 129
                localctx.oid = self.match(osekoilParser.T__18)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImplementationListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(osekoilParser.ImplementationListContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._implementationDef = None # ImplementationDefContext
            self.items = list() # of ImplementationDefContexts

        def implementationDef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(osekoilParser.ImplementationDefContext)
            else:
                return self.getTypedRuleContext(osekoilParser.ImplementationDefContext,i)


        def getRuleIndex(self):
            return osekoilParser.RULE_implementationList

        def enterRule(self, listener):
            if hasattr(listener, "enterImplementationList"):
                listener.enterImplementationList(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImplementationList"):
                listener.exitImplementationList(self)




    def implementationList(self):

        localctx = osekoilParser.ImplementationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_implementationList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << osekoilParser.T__19) | (1 << osekoilParser.T__20) | (1 << osekoilParser.T__21) | (1 << osekoilParser.T__22) | (1 << osekoilParser.T__23) | (1 << osekoilParser.T__24) | (1 << osekoilParser.T__25) | (1 << osekoilParser.T__26) | (1 << osekoilParser.T__35) | (1 << osekoilParser.T__36) | (1 << osekoilParser.T__37) | (1 << osekoilParser.T__38) | (1 << osekoilParser.T__39) | (1 << osekoilParser.T__40) | (1 << osekoilParser.T__41) | (1 << osekoilParser.T__42) | (1 << osekoilParser.T__43) | (1 << osekoilParser.T__44) | (1 << osekoilParser.T__45) | (1 << osekoilParser.T__46) | (1 << osekoilParser.T__47))) != 0):
                self.state = 132
                localctx._implementationDef = self.implementationDef()
                localctx.items.append(localctx._implementationDef)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImplementationDefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(osekoilParser.ImplementationDefContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.a = None # ImplAttrDefContext
            self.r = None # ImplRefDefContext

        def implAttrDef(self):
            return self.getTypedRuleContext(osekoilParser.ImplAttrDefContext,0)


        def implRefDef(self):
            return self.getTypedRuleContext(osekoilParser.ImplRefDefContext,0)


        def getRuleIndex(self):
            return osekoilParser.RULE_implementationDef

        def enterRule(self, listener):
            if hasattr(listener, "enterImplementationDef"):
                listener.enterImplementationDef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImplementationDef"):
                listener.exitImplementationDef(self)




    def implementationDef(self):

        localctx = osekoilParser.ImplementationDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_implementationDef)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [osekoilParser.T__19, osekoilParser.T__20, osekoilParser.T__21, osekoilParser.T__22, osekoilParser.T__23, osekoilParser.T__24, osekoilParser.T__25, osekoilParser.T__26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                localctx.a = self.implAttrDef()
                pass
            elif token in [osekoilParser.T__35, osekoilParser.T__36, osekoilParser.T__37, osekoilParser.T__38, osekoilParser.T__39, osekoilParser.T__40, osekoilParser.T__41, osekoilParser.T__42, osekoilParser.T__43, osekoilParser.T__44, osekoilParser.T__45, osekoilParser.T__46, osekoilParser.T__47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                localctx.r = self.implRefDef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImplAttrDefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(osekoilParser.ImplAttrDefContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.t = None # Token
            self.a = None # AutoSpecifierContext
            self.n = None # AttributeNameContext
            self.m = None # MultipleSpecifierContext
            self.d = None # DescriptionContext

        def attributeName(self):
            return self.getTypedRuleContext(osekoilParser.AttributeNameContext,0)


        def numberRange(self):
            return self.getTypedRuleContext(osekoilParser.NumberRangeContext,0)


        def defaultNumber(self):
            return self.getTypedRuleContext(osekoilParser.DefaultNumberContext,0)


        def autoSpecifier(self):
            return self.getTypedRuleContext(osekoilParser.AutoSpecifierContext,0)


        def multipleSpecifier(self):
            return self.getTypedRuleContext(osekoilParser.MultipleSpecifierContext,0)


        def description(self):
            return self.getTypedRuleContext(osekoilParser.DescriptionContext,0)


        def floatRange(self):
            return self.getTypedRuleContext(osekoilParser.FloatRangeContext,0)


        def defaultFloat(self):
            return self.getTypedRuleContext(osekoilParser.DefaultFloatContext,0)


        def enumeration(self):
            return self.getTypedRuleContext(osekoilParser.EnumerationContext,0)


        def defaultName(self):
            return self.getTypedRuleContext(osekoilParser.DefaultNameContext,0)


        def defaultString(self):
            return self.getTypedRuleContext(osekoilParser.DefaultStringContext,0)


        def boolValues(self):
            return self.getTypedRuleContext(osekoilParser.BoolValuesContext,0)


        def defaultBool(self):
            return self.getTypedRuleContext(osekoilParser.DefaultBoolContext,0)


        def getRuleIndex(self):
            return osekoilParser.RULE_implAttrDef

        def enterRule(self, listener):
            if hasattr(listener, "enterImplAttrDef"):
                listener.enterImplAttrDef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImplAttrDef"):
                listener.exitImplAttrDef(self)




    def implAttrDef(self):

        localctx = osekoilParser.ImplAttrDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_implAttrDef)
        self._la = 0 # Token type
        try:
            self.state = 289
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [osekoilParser.T__19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                localctx.t = self.match(osekoilParser.T__19)
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==osekoilParser.T__32:
                    self.state = 143
                    localctx.a = self.autoSpecifier()


                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==osekoilParser.T__27:
                    self.state = 146
                    self.numberRange()


                self.state = 149
                localctx.n = self.attributeName()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==osekoilParser.T__27:
                    self.state = 150
                    localctx.m = self.multipleSpecifier()


                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==osekoilParser.T__1:
                    self.state = 153
                    self.defaultNumber()

